// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsPage render AuthorsPage with authors 1`] = `
Array [
  <h2>
    Authors
  </h2>,
  <button
    className="btn btn-primary add-course"
    onClick={[Function]}
    style={
      Object {
        "marginBottom": 20,
      }
    }
    type="button"
  >
    Add Author
  </button>,
  <input
    className="form-control"
    id="filter-courses"
    name="filter"
    onChange={[Function]}
    placeholder="Filter authors"
    type="text"
  />,
  <table
    className="table"
  >
    <thead>
      <tr>
        <th>
          Name
        </th>
        <th>
           
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          <a
            href="/author/cory-house"
            onClick={[Function]}
          >
            Cory House
          </a>
        </td>
        <td>
          <button
            className="btn btn-outline-danger float-right"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <a
            href="/author/scott-allen"
            onClick={[Function]}
          >
            Scott Allen
          </a>
        </td>
        <td>
          <button
            className="btn btn-outline-danger float-right"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td>
          <a
            href="/author/dan-wahlin"
            onClick={[Function]}
          >
            Dan Wahlin
          </a>
        </td>
        <td>
          <button
            className="btn btn-outline-danger float-right"
            onClick={[Function]}
            type="button"
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`AuthorsPage render AuthorsPage with empty authors 1`] = `
Array [
  <h2>
    Authors
  </h2>,
  <button
    className="btn btn-primary add-course"
    onClick={[Function]}
    style={
      Object {
        "marginBottom": 20,
      }
    }
    type="button"
  >
    Add Author
  </button>,
  <input
    className="form-control"
    id="filter-courses"
    name="filter"
    onChange={[Function]}
    placeholder="Filter authors"
    type="text"
  />,
  <p>
    There are no authors to display.
  </p>,
]
`;
